# markov-graph-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: erreur_frontiere_eps_sup.txt  erreur_plusieurs_sommets.txt  erreur_somme_inf_1.txt  erreur_somme_sup_1.txt  erreur_somme_zero.txt
include/: graph.h  hasse.h  io.h  list.h  markov_props.h  matrix.h  matrix_sub.h  mermaid.h  mermaid_hasse.h  period.h  scc.h  tarjan.h  utils.h  verify.h
src/: graph.c  hasse.c  io.c  list.c  main.c  markov_props.c  matrix.c  mermaid.c  mermaid_hasse.c  period.c  scc.c  tarjan.c  utils.c  verify.c
test/: CMakeLists.txt  README.md  test_io_verify.c  test_mermaid.c
test/class_analysis_and_export/: CMakeLists.txt  test_class_analysis_and_export.c
test/core/: CMakeLists.txt  test_core.c
test/hasse_links/: CMakeLists.txt  test_hasse_links.c
test/io_verify/: CMakeLists.txt  test_io_verify.c
test/matrix_ops/: CMakeLists.txt  test_matrix_ops.c
test/mermaid-cli/: CMakeLists.txt
test/mermaid_cli/: CMakeLists.txt  test_mermaid.c
test/period_analysis/: CMakelists.txt  test_period.c
test/stationary_analysis/: CMakeLists.txt  test_stationary_analysis.c
test/tarjan_core/: CMakeLists.txt  test_tarjan_core.c
webui/: README.md  app.py
webui/static/js/: script.js
webui/templates/: index.html
